# thernz_game

./: #main.cpp#  #rendering.h#  #rw_lock.h#  #tzbackend_dispatch.h#  #tzengine.h#  #tzinput.cpp#  .gitmodules  CMakeLists.txt  README.md  TODO.txt  TODO.txt~  command_buffer.cpp  command_buffer.h  config.cpp  config.h  error_codes.cpp  error_codes.h  game.cpp  game.h  graphics.cpp  graphics.h  handle.cpp  handle.h  main.cpp  memory.cpp  memory.h  mesh.cpp  mesh.h  queue.h  render_functions.cpp  render_functions.h  render_globals.cpp  render_globals.h  render_types.cpp  render_types.h  rendering.cpp  rendering.h  rw_lock.cpp  rw_lock.h  sort.h  (+37 more)
assets/shaders/: test.frag  test.vert
cmake/Modules/: FindSDL2_image.cmake
tests/: CMakeLists.txt  template.cpp
tests/ds_test/: main.cpp
tests/handle_test/: main.cpp
tests/new_api_test/: main.cpp
tests/obj_mesh_test/: main.cpp
tests/sprite_batch_test/: .#CMakeLists.txt  CMakeLists.txt  main.cpp
